fixed home search div overflowing problem

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,7 +26,7 @@ body {
     }
 }
 .hero {
-    height: 85vh;
+    // height: 85vh;
     width: 100vw;
     background: url("https://a0.muscache.com/4ea/air/r:w3100-h2074-sfit,e:fjpg-c80/pictures/0ffd8594-f123-43f0-85bb-7ef88c6f0624.jpg");
     background-size: cover;
